Minor changes to ensure alignment of truncated job names in the History panel

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -103,7 +103,7 @@ th {
 	padding-bottom: 3px;
 	margin-left: 0px;
 	margin-right: 2px;
-	max-width: 146px;
+	max-width: 141px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
